--- a/exam/index.html
+++ b/exam/index.html
@@ -212,7 +212,7 @@
                                 <a href="https://linrunner.de/tlp/installation/index.html">TLP</a>. <br><br>Sa website ng TLP pindutin sa kaliwa, ang drop-down na may Fedora. Basahin ang documention at sundan ang mga kailangang gawin, o di kaya naman i-type ang command na ito sa Terminal: <br><br>
                                 sudo dnf install tlp tlp-rdw<br><br>
                                 Upang umipekto ang optimization na ito, kailangan mo i-restart ang iyong computer kapag tapos na mainstall nito. Kapag tapos nito ay automatic
-                                nang mag ooptimize ang TLP sa iyong laptop, kada bubuksan mo ito.
+                                nang mag ooptimize ang TLP sa iyong laptop, kada bubuksan mo ito.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonTlp">View Image/s</button>
                             </div>
                         </div>
