fixed the broken

--- a/Activity1/index.html
+++ b/Activity1/index.html
@@ -5,22 +5,23 @@
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.css">
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.min.css">
         <link rel="stylesheet" href="style.css">
+        <script src="app.js"></script>
     </head>
     <body>
         <!--NavBar-->
         <div id="navv">
             <nav class="border fixed split-nav">
                 <div class="nav-brand">
-                    <h3><a href="#">Tao Te Ching</a></h3>
+                    <h3><a href="#navv">Tao Te Ching</a></h3>
                 </div>
             </nav>
         </div>
         <!--Content-->
         <div class="collapsible">
             <!--One-->
-            <div class="card" style="width: 30rem;">
-                <img class="image-bottom" src="https://i.picsum.photos/id/190/550/250.jpg" >
-                <div class="card-body">
+            <div class="card" style="box-sizing: content-box;">
+                <img class="image-bottom" src="pic1.jpg" >
+                <div class="card-body" style="box-sizing: content-box;">
                     <h4 class="card-title">One</h4>
                     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
                     <div class="row flex-spaces child-borders">
@@ -29,7 +30,7 @@
                     <input class="modal-state" id="modal-1" type="checkbox">
                     <div class="modal">
                         <label class="modal-bg" for="modal-1"></label>
-                        <div class="modal-body" style="width: 150%;">
+                        <div class="modal-body">
                             <label class="btn-close" for="modal-1">X</label>
                             <h4 class="modal-title">One</h4>
                             <p class="modal-text">
@@ -54,9 +55,9 @@
             </div>
 
             <!--Two-->
-            <div class="card" style="width: 30rem;">
-                <img class="image-bottom" src="https://i.picsum.photos/id/306/550/250.jpg" >
-                <div class="card-body">
+            <div class="card"  style="box-sizing: content-box;">
+                <img class="image-bottom" src="pic2.jpg">
+                <div class="card-body" style="box-sizing: content-box;">
                     <h4 class="card-title">Two</h4>
                     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
                     <div class="row flex-spaces child-borders">
@@ -65,7 +66,7 @@
                     <input class="modal-state" id="modal-2" type="checkbox">
                     <div class="modal">
                         <label class="modal-bg" for="modal-2"></label>
-                        <div class="modal-body" style="width: 150%;">
+                        <div class="modal-body">
                             <label class="btn-close" for="modal-2">X</label>
                             <h4 class="modal-title">Two</h4>
                             <p class="modal-text">
@@ -94,9 +95,9 @@
             </div>
 
             <!--Three-->
-            <div class="card" style="width: 30rem;">
-                <img class="image-bottom" src="https://i.picsum.photos/id/1042/550/250.jpg" >
-                <div class="card-body">
+            <div class="card" style="box-sizing: content-box;">
+                <img class="image-bottom" src="pic3.jpg" >
+                <div class="card-body" style="box-sizing: content-box;">
                     <h4 class="card-title">Three</h4>
                     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
                     <div class="row flex-spaces child-borders">
@@ -105,7 +106,7 @@
                     <input class="modal-state" id="modal-3" type="checkbox">
                     <div class="modal">
                         <label class="modal-bg" for="modal-3"></label>
-                        <div class="modal-body" style="width: 150%;">
+                        <div class="modal-body">
                             <label class="btn-close" for="modal-3">X</label>
                             <h4 class="modal-title">Three</h4>
                             <p class="modal-text">
